created working js for project

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <div class="container start">
                 <h1>Coding Quiz Challenge</h1>  
                 <p>Try to answer the following HTML-related questions within the time limit. Correct answers are worth 10 points!
-                Keep in mind that incorrect answers will penalize your score by 4 points and your time by 3 seconds!
+                Keep in mind that incorrect answers will penalize your score by 1 points and your time by 3 seconds!
                 </p>
                 <button class="btn startend" id="start-game">Start Quiz</button>
             </div>    
@@ -47,11 +47,17 @@
 
         <div id="high-score-container" class="hide">
           <div class="high-scores container">
-            <h1 class="high-score">High Scores</h1>
-            <ol id="high-score-list" class="score-list"></ol>
-        <div>
-            <button class="btn" id="go-back">Go back</button>
-            <button class="btn" id="clear-high-scores">Clear high scores</button>
+                <h1 class="high-score">High Scores</h1>
+                <ol id="high-score-list" class="score-list"></ol>
+                <div>
+                    <button class="btn" id="go-back">Go back</button>
+                    <button class="btn" id="clear-high-scores">Clear high scores</button>
+                </div>
+             </div>
         </div>
-        </div>
-    </div>
+    
+
+        <script src="./assets/js/script.js"></script>
+    </body>
+</html>
+
